--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Chat with Gemma </title>
+  <title>Chat with Gemma</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Chat con Gemma</h1>
+  <h1>Chat with Gemma ;)\\</h1>
   <input id="msg" placeholder="Scrivi un messaggio..." />
   <button onclick="send()">Invia</button>
   <pre id="output"></pre>
